2011-12-31 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #10809: added hook in cmd_compileMailGroup (mod2 und mod3)
	* Bug #11851: added sorting of the dmail sysfolder

2011-12-30 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #29503: improved statistic label
	* Bug #31752: check SYS_TABLE_NAME in jumpurl
	* layout CSV importer is improved
	* Bug #11171: importer code cleanup
	
2011-12-28 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #26699: removing alternative link to create new page
	* Bug #28921: check TYPO3 Version and set charset for the importer
	* added deprecation log in dmailerd.phpcron

2011-12-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #32410, #32588, #32264: deprecated function in 4.6

2011-07-08 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Feature #11010: add categories during import, instead overwriting existing one.
	* Feature #6820: added attachment to quickmail
	
2011-07-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #27736: fixed MM-query getting fe_groups recursively. Check empty array.
	
2011-07-07 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #27736: SQL-Error "WHERE () AND" in tx_directmail_static
	* Task #26696: Remove tx_directmail_cron.lock
	* Bug #26698: Optimization of logging

2011-07-06 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Feature #25466: Added feature to send newsletter to multiple lists.

2011-06-13 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #13086: Tables needs to use the sorting field

2011-06-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #26791: sending external URL was faild. bug in fetching process
	* Feature #26729: use img title as title in statistic, if there's any

2011-05-10 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #9787: Wrong permissions for tx_directmail_dmailer_log.txt

2011-05-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #7152: Fix importer for non admin user
	* Updated documentation
	* Bug #26392: SQL compatibility

2011-03-24 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #13124: depreciation log messages with typo 4.5
