@@ -100,6 +100,7 @@ require_once(PATH_t3lib.'class.t3lib_befunc.php');
 class dmailer extends t3lib_htmlmail {
 	var $sendPerCycle =50;
 	var $dontEncodeHeader = 1;
+	var $logArray = array();
 	var $massend_id_lists = array();
 	var $mailHasContent;
 	var $flag_html = 0;
@@ -486,6 +487,7 @@ class dmailer extends t3lib_htmlmail {
 				}
 			}
 			if (TYPO3_DLOG) t3lib_div::devLog('Sending ' . $cc . ' mails to table ' . $table, 'direct_mail');
+			$this->logArray[] = 'Sending ' . $cc . ' mails to table ' . $table;
 			if ($numRows < $this->sendPerCycle)	return true;
 		}
 		return false;
@@ -566,6 +568,7 @@ class dmailer extends t3lib_htmlmail {
 						}
 					}
 					if (TYPO3_DLOG) t3lib_div::devLog($LANG->getLL('dmailer_sending').' '.$ct.' '.$LANG->getLL('dmailer_sending_to_table').' '.$table, 'direct_mail');
+					$this->logArray[] = $LANG->getLL('dmailer_sending').' '.$ct.' '.$LANG->getLL('dmailer_sending_to_table').' '.$table;
 				}
 			}
 		}
@@ -663,6 +666,7 @@ class dmailer extends t3lib_htmlmail {
 			break;
 		}
 		if (TYPO3_DLOG) t3lib_div::devLog($subject . ': '.$message, 'direct_mail');
+		$this->logArray[] = $subject . ': '.$message;
 
 		$from_name = ($this->from_name) ? $LANG->csConvObj->conv($this->from_name, $this->charset, $LANG->charSet) : '';
 
@@ -820,6 +824,7 @@ class dmailer extends t3lib_htmlmail {
 			'scheduled'
 		);
 		if (TYPO3_DLOG) t3lib_div::devLog($LANG->getLL('dmailer_invoked_at'). ' ' . date('h:i:s d-m-Y'), 'direct_mail');
+		$this->logArray[] = $LANG->getLL('dmailer_invoked_at'). ' ' . date('h:i:s d-m-Y');
 
 		if ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res))	{
 				// format headers for SMTP use
@@ -832,6 +837,7 @@ class dmailer extends t3lib_htmlmail {
 			}
 
 			if (TYPO3_DLOG) t3lib_div::devLog($LANG->getLL('dmailer_sys_dmail_record') . ' ' . $row['uid']. ', \'' . $row['subject'] . '\'' . $LANG->getLL('dmailer_processed'), 'direct_mail');
+			$this->logArray[] = $LANG->getLL('dmailer_sys_dmail_record') . ' ' . $row['uid']. ', \'' . $row['subject'] . '\'' . $LANG->getLL('dmailer_processed');
 			$this->dmailer_prepare($row);
 			$query_info=unserialize($row['query_info']);
 			if (!$row['scheduled_begin'])   {
@@ -843,6 +849,7 @@ class dmailer extends t3lib_htmlmail {
 			}
 		} else {
 			if (TYPO3_DLOG) t3lib_div::devLog($LANG->getLL('dmailer_nothing_to_do'), 'direct_mail');
+			$this->logArray[] = $LANG->getLL('dmailer_nothing_to_do');
 		}
 
 		//closing DB connection
@@ -850,6 +857,7 @@ class dmailer extends t3lib_htmlmail {
 		
 		$parsetime = t3lib_div::milliseconds()-$pt;
 		if (TYPO3_DLOG) t3lib_div::devLog($LANG->getLL('dmailer_ending'). ' ' . $parsetime . ' ms', 'direct_mail');
+		$this->logArray[] = $LANG->getLL('dmailer_ending'). ' ' . $parsetime . ' ms';
 	}
 
 	/**
@@ -868,6 +876,8 @@ class dmailer extends t3lib_htmlmail {
 		$this->user_dmailerLang = $user_dmailer_lang;
 		if (!$this->nonCron) {
 			if (TYPO3_DLOG) t3lib_div::devLog('Starting directmail cronjob', 'direct_mail');
+			//write this temp file for checking the engine in the status module
+			$this->dmailer_log('w','starting directmail cronjob');
 		}
 		
 		$this->dontEncodeHeader = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['direct_mail']['encodeHeader'];  
@@ -1163,6 +1173,26 @@ class dmailer extends t3lib_htmlmail {
 		
 		parent::setHeaders();
 		$this->messageid = $oldMsgID;
+	}
+	
+	/**
+	* write to log file and send a notification email to admin if no records in sys_dmail_maillog table can be made
+	*
+	* @param	string		$writeMode: mode to open a file
+	* @param	string		$logMsg: log message
+	* @return	void		...
+	*/
+	function dmailer_log($writeMode,$logMsg){
+		global $TYPO3_CONF_VARS;
+	
+		$content = time().' => '.$logMsg.chr(10);
+		$logfilePath = 'typo3temp/tx_directmail_dmailer_log.txt';
+
+		$fp = fopen(PATH_site.$logfilePath,$writeMode);
+		if ($fp) {
+			fwrite($fp,$content);
+			fclose($fp);
+		}			
 	}
 	
 }
